<resources>
    <string name="app_name">SpeedyMarket</string>
    <string name="title_activity_main">SpeedyMarket</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="txt_bienvenue">Bienvenue sur Speedy-Market</string>
    <string name="txt_categorie_titre">Choisir une catégorie</string>
    <string name="txt_viandes">Viandes</string>
    <string name="txt_poissons">Poissons</string>
    <string name="txt_fruits">Fruits</string>
    <string name="txt_legumes">Légumes</string>
    <string name="txt_soft">Boissons soft</string>
    <string name="txt_alcool">Boissons alcoolisées</string>
    <string name="txt_fromages">Fromages</string>
    <string name="txt_yaourts">Yaourts</string>
    <string name="txt_conserves">Conserves</string>
    <string name="txt_epi_sal">Épicerie salée</string>
    <string name="txt_epi_suc">Épicerie sucrée</string>
    <string name="txt_pdts_secs">Produits secs</string>
    <string name="prix">Prix</string>
    <string name="articles">Articles</string>
    <string name="quantité">Quantité</string>
    <string name="nomarticle" />
</resources>
