<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/txt_categorie_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_categorie_titre"
        android:textAlignment="center" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="73dp"
            android:layout_height="73dp"
            app:srcCompat="@drawable/viande"
            android:id="@+id/btn_categorie_viande"
            android:layout_weight="1.01"
            android:src="@drawable/viande" />

        <ImageButton
            android:layout_width="73dp"
            android:layout_height="73dp"
            app:srcCompat="@drawable/poisson"
            android:layout_weight="1"
            android:id="@+id/btn_categorie_poisson"
            android:src="@drawable/poisson" />

        <ImageButton
            android:layout_width="73dp"
            android:layout_height="73dp"
            app:srcCompat="@drawable/fruits"
            android:id="@+id/imageButton3"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="73dp"
            app:srcCompat="@drawable/brocolis"
            android:id="@+id/imageButton4"
            android:layout_weight="1"
            android:layout_height="73dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:text="@string/txt_viandes"
            android:layout_height="wrap_content"
            android:id="@+id/txt_viandes"
            android:layout_weight="1"
            android:textAlignment="center"
            android:layout_width="95dp" />

        <TextView
            android:text="@string/txt_poissons"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/txt_poissons"
            android:layout_width="95dp"
            android:textAlignment="center" />

        <TextView
            android:text="@string/txt_fruits"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="95dp"
            android:textAlignment="center"
            android:id="@+id/txt_fruits" />

        <TextView
            android:text="@string/txt_legumes"
            android:layout_height="wrap_content"
            android:id="@+id/txt_legumes"
            android:layout_weight="1"
            android:layout_width="95dp"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_gallery"
            android:id="@+id/imageButton5"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_gallery"
            android:id="@+id/imageButton6"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_gallery"
            android:id="@+id/imageButton7"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_gallery"
            android:id="@+id/imageButton8"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_gallery"
            android:id="@+id/imageButton9"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_gallery"
            android:id="@+id/imageButton10"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_gallery"
            android:id="@+id/imageButton11"
            android:layout_weight="1" />

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_menu_gallery"
            android:id="@+id/imageButton12"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>